--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@react-navigation/stack": "^6.3.11",
     "react": "18.2.0",
     "react-native": "0.71.1",
+    "react-native-calendars": "^1.1293.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.19.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-screens": "^3.19.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
