--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ant-design/icons-react-native": "^2.3.2",
+    "@ant-design/react-native": "^5.0.3",
+    "@react-native-camera-roll/camera-roll": "^5.2.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/segmented-control": "^2.2.2",
+    "@react-native-community/slider": "^4.4.2",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
@@ -23,7 +29,8 @@
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -34,6 +41,7 @@
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.27",
     "@types/react-native": "^0.71.0",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
