--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.3",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-calendars": "^1.1293.0",
