--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ yarn-error.log
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# 메모장!!
+dummy.json
+.env
