--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
     "@reduxjs/toolkit": "^1.9.2",
+    "add": "^2.0.6",
     "axios": "^1.3.3",
+    "jwt-decode": "^3.1.2",
+    "or": "^0.2.0",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-calendars": "^1.1293.0",
@@ -34,7 +37,8 @@
     "react-native-screens": "^3.19.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -53,6 +57,7 @@
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.8.4"
   },
   "jest": {
