--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "expo start --dev-client",
     "test": "jest"
   },
   "dependencies": {
@@ -16,7 +16,7 @@
     "@react-native-camera-roll/camera-roll": "^5.2.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/segmented-control": "^2.2.2",
-    "@react-native-community/slider": "^4.4.2",
+    "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
@@ -25,10 +25,17 @@
     "@reduxjs/toolkit": "^1.9.2",
     "add": "^2.0.6",
     "axios": "^1.3.3",
+    "expo": "^48.0.0",
+    "expo-av": "~13.2.1",
+    "expo-document-picker": "~11.2.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "or": "^0.2.0",
     "react": "18.2.0",
-    "react-native": "0.71.1",
+    "react-cookie": "^4.1.1",
+    "react-native": "0.71.3",
     "react-native-calendars": "^1.1293.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.1.4",
