--- a/package.json
+++ b/package.json
@@ -32,19 +32,17 @@
     "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
+    "moti": "^0.24.2",
     "or": "^0.2.0",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-native": "0.71.3",
-    "react-native-calendars": "^1.1293.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.1.4",
-    "react-native-reanimated": "^3.0.2",
-    "react-native-safe-area-context": "4.5.0",
+    "react-native-reanimated": "^2.14.4",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-slider": "^0.11.0",
-    "react-native-splash-screen": "^3.3.0",
-    "react-native-track-player": "^3.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.26.1",
     "react-redux": "^8.0.5",
