Applied Fonts; Fixed Start Screen; Setting Screen;

--- a/ios/Ichigo/Info.plist
+++ b/ios/Ichigo/Info.plist
@@ -50,6 +50,8 @@
 	<string>Allow $(PRODUCT_NAME) to access your microphone</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>Dovemayo_gothic.ttf</string>
+		<string>TAEBAEK-milkyway.otf</string>
 		<string>AntDesign.ttf</string>
 		<string>antoutline.ttf</string>
 		<string>antfill.ttf</string>
