--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/segmented-control": "^2.2.2",
     "@react-native-community/slider": "4.4.2",
-    "@react-native-picker/picker": "^2.4.8",
+    "@react-native-picker/picker": "^2.4.9",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
@@ -28,17 +28,21 @@
     "expo": "^48.0.0",
     "expo-av": "~13.2.1",
     "expo-document-picker": "~11.2.1",
+    "expo-font": "^11.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "moti": "^0.24.2",
     "or": "^0.2.0",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-native": "0.71.3",
+    "react-native-document-picker": "^8.2.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.1.4",
+    "react-native-prompt-android": "^1.1.0",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
