--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-av": "~13.2.1",
     "expo-document-picker": "~11.2.1",
     "expo-font": "^11.1.1",
+    "expo-modules-core": "^1.2.6",
     "expo-status-bar": "~1.4.4",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
@@ -37,8 +38,7 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
-    "react-native": "0.71.3",
-    "react-native-document-picker": "^8.2.0",
+    "react-native": "0.71.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.1.4",
     "react-native-prompt-android": "^1.1.0",
