--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-native": "0.71.6",
+    "react-native-calendars": "^1.1294.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.1.4",
     "react-native-prompt-android": "^1.1.0",
