--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "expo-font": "^11.1.1",
     "expo-modules-core": "^1.2.6",
     "expo-status-bar": "~1.4.4",
+    "jsc-android": "^250231.0.0",
     "jwt-decode": "^3.1.2",
+    "luxon": "^3.3.0",
     "moment": "^2.29.4",
     "moti": "^0.24.2",
     "or": "^0.2.0",
@@ -40,6 +42,7 @@
     "react-cookie": "^4.1.1",
     "react-native": "0.71.6",
     "react-native-calendars": "^1.1294.0",
+    "react-native-date-picker": "^4.2.12",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.1.4",
     "react-native-prompt-android": "^1.1.0",
@@ -59,6 +62,7 @@
     "@react-native-community/eslint-config": "^3.0.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
+    "@types/luxon": "^3.3.0",
     "@types/react": "^18.0.27",
     "@types/react-native": "^0.71.0",
     "@types/react-native-vector-icons": "^6.4.13",
