--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -44,3 +44,8 @@ newArchEnabled=false
 hermesEnabled=false
 
 expo.jsEngine=hermes
+
+MYAPP_RELEASE_STORE_FILE=ichigo.keystore
+MYAPP_RELEASE_KEY_ALIAS=ichigo
+MYAPP_RELEASE_STORE_PASSWORD=ixiego123
+MYAPP_RELEASE_KEY_PASSWORD=ixiego123
